add endpoint /api/update-user-password
